
## Misc Improvements
- `tailor`: allow turning off automatic confiscation of tattered clothing
- aquifer tap blueprint: now designates in damp dig mode for uninterrupted digging in a light aquifer
- pump stack blueprint: now designates in warm and damp dig mode for uninterrupted digging through warm and damp tiles

## Documentation
- ``Lua API.rst``: added previously undocumented ``next_item(index)`` function for enum types

## API
- ``Units::citizensRange``: c++-20 range for citizen units
- ``Units::forCitizens``: iterator callback function for citizen units
- ``Units::paintTile``, ``Units::readTile``: now takes an optional field specification for reading and writing to specific map compositing layers

## Lua
- ``dfhack.gui.matchFocusString``: focus string matching is now case sensitive (for performance reasons)

## Removed

# 50.12-r2.1

## Fixes
- `orders`: don't intercept keyboard input for setting skill or labor restrictions on workshop workers tab when the player is setting the building nickname

# 50.12-r2

## New Features
- `stocks`: add button/hotkey for removing empty categories from the stocks list
- `sort`: updated and reinstated military status/squad membership/burrow membership filter for work animal assignment screen
- `logistics`: ``autoretrain`` will automatically assign trainers to your partially-trained (but not yet domesticated) livestock. this prevents children of partially-trained parents from reverting to wild if you don't notice they were born
- `orders`: add overlay for configuring labor and skill level restrictions for workshops

## Fixes
- `autochop`: fix underestimation of log yield for cavern mushrooms
- `gui/notify`: prevent notification overlay from showing up in arena mode
- `logistics`: don't melt/trade/dump empty containers that happen to be sitting on the stockpile unless the stockpile accepts those item types
- `gui/launcher`: fix detection on Shift-Enter for running commands and autoclosing the launcher